--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   bloc: ^8.0.3
@@ -38,6 +39,7 @@ dev_dependencies:
   flutter_speed_dial: ^6.0.0
   flutter_test:
     sdk: flutter
+  logger: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
