--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,22 +27,29 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animate_icons: ^2.0.0
+  animated_icon_button: ^1.0.2
+  bloc: ^8.0.3
   cupertino_icons: ^1.0.2
+  easy_splash_screen: ^1.0.3
   equatable: ^2.0.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  flutter_lorem: ^2.0.0
+  flutter_speed_dial: ^6.0.0
+  go_router: ^4.2.7
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding.git
+      path: plugins/window_size
+
 
 dev_dependencies:
-  animate_icons: ^2.0.0
-  animated_icon_button: ^1.0.2
-  bloc: ^8.0.3
   bloc_test: ^9.0.3
   flutter_lints: ^2.0.0
-  flutter_speed_dial: ^6.0.0
   flutter_test:
     sdk: flutter
-  logger: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
