--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,11 @@ dependencies:
   flutter_bloc: ^8.0.1
   flutter_speed_dial: ^6.0.0
   go_router: ^4.2.7
+  isar: ^2.5.0
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
-
 
 dev_dependencies:
   bloc_test: ^9.0.3
