--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_speed_dial: ^6.0.0
   go_router: ^4.2.7
   isar: ^2.5.0
+  isar_flutter_libs: ^2.5.0
+  path_provider: ^2.0.11
+  shared_preferences: ^2.0.15
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
@@ -46,10 +49,12 @@ dependencies:
 
 dev_dependencies:
   bloc_test: ^9.0.3
+  build_runner: ^2.2.0
   flutter_lints: ^2.0.0
   flutter_lorem: ^2.0.0
   flutter_test:
     sdk: flutter
+  isar_generator: ^2.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
