changed launcher icon. changed app name. Fixed bug where desktop page refreshed when selecting another option. completed desktop settings page. completed settings navigation.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,9 @@ dev_dependencies:
   flutter_lorem: ^2.0.0
   flutter_test:
     sdk: flutter
+  icons_launcher: ^2.0.0
   isar_generator: ^2.5.0
+  rename_app: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,7 +69,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-     - lib/assets/
+    - lib/assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
