--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   animate_icons: ^2.0.0
   animated_icon_button: ^1.0.2
   bloc: ^8.0.3
-  cupertino_icons: ^1.0.2
   easy_splash_screen: ^1.0.3
   equatable: ^2.0.3
   flutter:
@@ -42,11 +41,7 @@ dependencies:
   isar_flutter_libs: ^2.5.0
   path_provider: ^2.0.11
   shared_preferences: ^2.0.15
-  
-  window_size:
-    git:
-      url: https://github.com/google/flutter-desktop-embedding.git
-      path: plugins/window_size
+  window_manager: ^0.2.7
 
 dev_dependencies:
   bloc_test: ^9.0.3
